mdapi/Custom/objects/Technician__c.object
<CustomObject>
    <description>Resident Services Project:  This object is used as a requirement to the TOA integration.  It contains all of the Technicians that are assigned to Service Items.</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Average_Monthly_Appointments__c</fullName>
        <label>Average Monthly Appointments</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Average_PA_Score__c</fullName>
        <label>Average PA Score</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bucket__c</fullName>
        <label>Bucket</label>
        <referenceTo>ETABucket__c</referenceTo>
        <relationshipLabel>Technicians</relationshipLabel>
        <relationshipName>Technicians</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hourly_Pay_del__c</fullName>
        <defaultValue>25</defaultValue>
        <label>Hourly Pay</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Technicians</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Technician</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Average_PA_Score__c</columns>
        <columns>Average_Monthly_Appointments__c</columns>
        <columns>Email__c</columns>
        <columns>Phone__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Technician Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Technicians</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>